--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -31,6 +31,8 @@
         "external_link_message": "This link will take you away from the app",
         "affiliation_steemit": "Steemit Team",
 	"affiliation_stemgeeks": "STEMGeeks Team",
+	"affiliation_advisor": "STEMGeeks Advisor",
+	"affiliation_steemstem": "SteemSTEM",
         "affiliation_sm": "Steem Monsters Team",
         "feed": "Feed",
         "follow": "Follow",
