--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -30,7 +30,9 @@
         "email": "Электронная почта",
         "external_link_message": "This link will take you away from the app",
         "affiliation_steemit": "Steemit Team",
-        "affiliation_stemgeeks": "STEMGeeks Team",	
+        "affiliation_stemgeeks": "STEMGeeks Team",
+        "affiliation_advisor": "STEMGeeks Advisor",	
+        "affiliation_steemstem": "SteemSTEM",	
         "affiliation_sm": "Steem Monsters Team",
         "feed": "Лента",
         "follow": "Подписаться",
